MVP Web Version Complete - Email Auth Implementation

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <meta name="theme-color" content="#667eea" />
+    <meta name="description" content="Belka Coffee - Система управления графиком работы" />
+    <title>Belka Coffee - Управление графиком</title>
   </head>
   <body>
     <div id="root"></div>
